[package]
name = "Mustang"
description = "A simple, blazing-fast URL shortener made using Redis and Axum."
version = "1.0.0"
edition = "2021"
authors = ["Panos Kalogeropoulos"]
homepage = "github.com/pankalog/mustang-rs"

[tasks.build]
description = "Build the project"
command = "cargo"
args = ["build"]
[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8"
axum = "0.7"
tokio = {version= "1.41.1",features = ["full", "rt-multi-thread"] }
redis="*"
utoipa="5"
dotenv = "0.15.0"